--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,8 @@
     <meta charset="utf-8" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Non-profit website dedicated to showing coronavirus(COVID-19) statistics in Algeria.
+      موقع غير ربحي مخصص لعرض إحصائيات وباء كورونا في الجزائر"
     />
     <!--
       manifest.json provides metadata used when your web app is installed on a
