--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,10 @@
       content="Non-profit website dedicated to showing coronavirus(COVID-19) statistics in Algeria.
       موقع غير ربحي مخصص لعرض إحصائيات وباء كورونا في الجزائر"
     />
+    <meta property="og:url" content="https://dz-covid19.com" />
+    <meta property="og:title" content="موقع إحصائيات كورونا في الجزائر" />
+    <meta property="og:description" content="موقع غير ربحي مخصص لعرض إحصائيات وباء كورونا في الجزائر" />
+    <meta property="og:image" content="https://dz-covid19.com/facebook.jpg" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
