Fixed facebook og tags

--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,8 @@
       موقع غير ربحي مخصص لعرض إحصائيات وباء كورونا في الجزائر"
     />
     <meta property="og:url" content="https://dz-covid19.com" />
+    <meta property="og:type" content="website" />
+    <meta property="fb:app_id" content="886327321808239" />
     <meta property="og:title" content="موقع إحصائيات كورونا في الجزائر" />
     <meta property="og:description" content="موقع غير ربحي مخصص لعرض إحصائيات وباء كورونا في الجزائر" />
     <meta property="og:image" content="https://dz-covid19.com/facebook.jpg" />
