--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,7 @@
     <meta property="og:title" content="موقع إحصائيات كورونا في الجزائر" />
     <meta property="og:description" content="موقع غير ربحي مخصص لعرض إحصائيات وباء كورونا في الجزائر" />
     <meta property="og:image" content="https://dz-covid19.com/facebook.jpg" />
+    <meta http-equiv="refresh" content="3600" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
