--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,11 @@
       integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ=="
       crossorigin=""
     />
+    <script
+      defer
+      crossorigin="anonymous"
+      src="https://connect.facebook.net/fr_FR/sdk.js#xfbml=1&version=v6.0&appId=129275294386562&autoLogAppEvents=1"
+    ></script>
     <!--
     <link
       rel="stylesheet"
@@ -47,6 +52,7 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="fb-root"></div>
     <div id="root"></div>
     <!--
       This HTML file is a template.
