fixed arabic font

--- a/public/index.html
+++ b/public/index.html
@@ -33,6 +33,7 @@
       crossorigin="anonymous"
       src="https://connect.facebook.net/fr_FR/sdk.js#xfbml=1&version=v6.0&appId=129275294386562&autoLogAppEvents=1"
     ></script>
+    <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@200;300;400;500;700;800;900&display=swap" rel="stylesheet" />
     <!--
     <link
       rel="stylesheet"
