--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,7 @@
     <meta charset="utf-8" />
     <meta
       name="description"
-      content="Non-profit website dedicated to showing coronavirus(COVID-19) statistics in Algeria.
-      موقع غير ربحي مخصص لعرض إحصائيات وباء كورونا في الجزائر"
+      content="Non-profit website dedicated to showing coronavirus(COVID-19) statistics in Algeria. موقع غير ربحي مخصص لعرض إحصائيات وباء كورونا في الجزائر"
     />
     <meta property="og:url" content="https://dz-covid19.com" />
     <meta property="og:type" content="website" />
