--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,7 @@
     <link rel="icon" href="%PUBLIC_URL%/img/corona.svg" type="image/svg+xml" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta charset="utf-8" />
-    <meta
-      name="description"
-      content="Non-profit website dedicated to showing coronavirus(COVID-19) statistics in Algeria. موقع غير ربحي مخصص لعرض إحصائيات وباء كورونا في الجزائر"
-    />
+    <meta name="description" content="Non-profit website dedicated to showing coronavirus(COVID-19) statistics in Algeria." />
     <meta property="og:url" content="https://dz-covid19.com" />
     <meta property="og:type" content="website" />
     <meta property="fb:app_id" content="886327321808239" />
