--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,7 @@
       crossorigin="anonymous"
       src="https://connect.facebook.net/fr_FR/sdk.js#xfbml=1&version=v6.0&appId=129275294386562&autoLogAppEvents=1"
     ></script>
+    <script data-ad-client="ca-pub-3044347590723152" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@200;300;400;500;700;800;900&display=swap" rel="stylesheet" />
 
     <title>Algeria COVID-19 Tracker</title>
