--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
     <script data-ad-client="ca-pub-3044347590723152" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@200;300;400;500;700;800;900&display=swap" rel="stylesheet" />
 
-    <title>Algeria COVID-19 Tracker</title>
+    <title>Algeria COVID-19 Tracker - Coronavirus Tracker</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
