--- a/public/index.html
+++ b/public/index.html
@@ -9,8 +9,8 @@
     <meta property="og:url" content="https://dz-covid19.com" />
     <meta property="og:type" content="website" />
     <meta property="fb:app_id" content="886327321808239" />
-    <meta property="og:title" content="موقع إحصائيات كورونا في الجزائر" />
-    <meta property="og:description" content="موقع غير ربحي مخصص لعرض إحصائيات وباء كورونا في الجزائر" />
+    <meta property="og:title" content="موقع إحصائيات فيروس كورونا في الجزائر" />
+    <meta property="og:description" content="موقع غير ربحي مخصص لعرض إحصائيات فيروس كورونا في الجزائر" />
     <meta property="og:image" content="https://dz-covid19.com/facebook.jpg" />
     <meta http-equiv="refresh" content="3600" />
     <!--
@@ -32,7 +32,7 @@
     <script data-ad-client="ca-pub-3044347590723152" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@200;300;400;500;700;800;900&display=swap" rel="stylesheet" />
 
-    <title>Algeria COVID-19 Tracker - Coronavirus Tracker</title>
+    <title>Algeria COVID-19 Tracker - إحصائيات فيروس كورونا في الجزائر</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
