--- a/public/index.html
+++ b/public/index.html
@@ -5,12 +5,12 @@
     <link rel="icon" href="%PUBLIC_URL%/img/corona.svg" type="image/svg+xml" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta charset="utf-8" />
-    <meta name="description" content="Non-profit website dedicated to showing coronavirus(COVID-19) statistics in Algeria." />
+    <meta name="description" content="موقع إحصائيات فيروس كورونا في الجزائر" />
     <meta property="og:url" content="https://dz-covid19.com" />
     <meta property="og:type" content="website" />
     <meta property="fb:app_id" content="886327321808239" />
     <meta property="og:title" content="موقع إحصائيات فيروس كورونا في الجزائر" />
-    <meta property="og:description" content="موقع غير ربحي مخصص لعرض إحصائيات فيروس كورونا في الجزائر" />
+    <meta property="og:description" content="موقع إحصائيات فيروس كورونا في الجزائر" />
     <meta property="og:image" content="https://dz-covid19.com/facebook.jpg" />
     <meta http-equiv="refresh" content="3600" />
     <!--
